# airgap_api

./: README.md  pyproject.toml  report.html  requirements.txt
airgap_api/api/: airportgap_api_client.py  api_client.py
airgap_api/data/: __init__.py  airports.py  enums.py  models.py
tests/: conftest.py  test__airports.py  test__favorites.py  test__tokens.py
